--- a/src/components/TrackList/TrackList.module.css
+++ b/src/components/TrackList/TrackList.module.css
@@ -1,39 +1,46 @@
 .list {
-    list-style: none;
+  list-style: none;
 }
 .listItem:first-child {
-    border-top: 1px solid #000;
+  border-top: 1px solid var(--placeholders-font);
 }
 .listItem {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    border-bottom: 1px solid #000;
-    padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 1px solid var(--placeholders-font);
+  padding: 10px;
+  font-weight: 500;
+  color: var(--primary-font-color);
+}
+.listItemActive {
+  composes: listItem;
+  color: var(--active-font-color);
+  background: var(--active-bg-color);
 }
 .name {
-    width: calc(100% - 150px);
-    margin-right: auto;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  width: calc(100% - 150px);
+  margin-right: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.time{
-    margin-right: 20px;
+.time {
+  margin-right: 20px;
 }
 .button {
-    border: none;
-    background: transparent;
-    outline: none;
+  border: none;
+  background: transparent;
+  outline: none;
 }
 .button:not(:last-child) {
-    margin-right: 10px;
+  margin-right: 10px;
 }
-.icon{
-    cursor: pointer;
+.icon {
+  cursor: pointer;
+  fill: var(--primary-font-color);
 }
 .removeIcon {
-    composes: icon;
-    fill: red;
+  composes: icon;
+  fill: var(--remove-button);
 }
-
